--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="./CSS'S/config-global.css">
     <link rel="stylesheet" href="./CSS'S/header.css">
+    <link rel="stylesheet" href="CSS'S/main.css">
 
 </head>
 <body>
@@ -26,7 +27,7 @@
     <div id="nav-links">
         
         <ul id="lista-links">
-            <li><a href="">Quem somos</a></li>
+            <li><a href="#text">Quem somos</a></li>
             <li><a href="">Motos disponíveis</a></li>
             <li><a href="">Nossas redes</a></li>
         </ul>
@@ -39,6 +40,17 @@
 </header>
 <img src="./ASSENTS/banner 1 (2).svg" alt="" id="banner">
 <img src="./ASSENTS/banner-celular 1.jpg" alt="" id="banner-responsivo">
+
+
+<main>
+    <div id="text">
+        <h1>A liberdade sobre duas rodas, com planos
+            <span>a partir de R$18.</span></h1>
+        <p>Uma locadora de motos comprometida em oferecer praticidade, liberdade e segurança. Garantimos a melhor experiência para quem precisa de uma moto para o dia a dia</p>
+        <p>Facilitamos sua mobilidade com motos econômicas para aluguel de forma simples e rápida.</p>
+    </div>
+    <img src="./ASSENTS/notebook e celular 1.png" alt="" id="notebook-celular">
+</main>
 
 
     
