--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="CSS'S/main.css">
     <link rel="stylesheet" href="./CSS'S/beneficios.css">
     <link rel="stylesheet" href="./CSS'S/nossas-motos.css">
+    <link rel="stylesheet" href="./CSS'S/planos.css">
 
 </head>
 <body>
@@ -30,12 +31,12 @@
         
         <ul id="lista-links">
             <li><a href="#main">Quem somos</a></li>
-            <li><a href="">Motos disponíveis</a></li>
-            <li><a href="">Nossas redes</a></li>
+            <li><a href="#motos-disponiveis">Motos disponíveis</a></li>
+            <li><a href="#planos-h1">Nossos planos</a></li>
         </ul>
         
         <div id="btn">
-        <button>Alugar agora</button>
+        <a href=""><button>Alugar agora</button></a >
         </div>
 
     </div>
@@ -78,11 +79,11 @@
     </div>
 
     <div id="my-moto">
-        <button>Quero minha moto</button>
+        <a href=""><button>Quero minha moto</button></a>
     </div>
 </section>
 
-<section>
+<section id="motos-disponiveis">
     <div id="moto-h1">
         <h1>Nossas motos</h1>
     </div>
@@ -107,7 +108,106 @@
             <p>Econômica, ágil e fácil de conduzir.</p>
         </div>
     </div>
+</section>
 
+<section>
+
+    <div id="planos-h1">
+        <h1>Nossos planos</h1>
+        <p> Planos flexíveis que se ajustam ao seu orçamento! Tudo de forma simples e rápida. </p>
+    </div>
+
+    <div id="planos">
+        <!--primeiro plano-->
+        <div class="planos-disp">
+            <p class="plano-pequeno">Plano</p>
+            <h1 class="titulo">Nome do plano</h1>
+            <p class="sub-titulo">Você aluga e no final a moto poderá ser sua.</p>
+
+            <div class="check">
+                <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
+                <p>Plano com duração de 2 anos.</p>
+            </div>
+
+            <div class="check">
+                <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
+                <p>Você pode escolher entre uma moto 0 km ou usada.</p>
+            </div>
+
+            <div class="check">
+                <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
+                <p>A moto poderá ser sua no final do plano.</p>
+            </div>
+
+
+            <p class="preco">A partir</p>
+            <h1 class="valor"> <strong>R$31</strong><span>/dia</span></h1>
+
+            <div class="btn-alugar">
+                <a href=""><button class="alugar-btn">Quero alugar</button></a>
+            </div>
+        </div>
+
+        <!--segundo plano-->
+        <div class="planos-disp">
+            <p class="plano-pequeno">Plano</p>
+            <h1 class="titulo">Nome do plano</h1>
+            <p class="sub-titulo">Você aluga e no final a moto poderá ser sua.</p>
+
+            <div class="check">
+                <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
+                <p>Plano com duração de 2 anos.</p>
+            </div>
+
+            <div class="check">
+                <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
+                <p>Você pode escolher entre uma moto 0 km ou usada.</p>
+            </div>
+
+            <div class="check">
+                <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
+                <p>A moto poderá ser sua no final do plano.</p>
+            </div>
+
+
+            <p class="preco">A partir</p>
+            <h1 class="valor"> <strong>R$31</strong><span>/dia</span></h1>
+
+            <div class="btn-alugar">
+                <a href=""><button class="alugar-btn">Quero alugar</button></a>
+            </div>
+        </div>
+
+        <!--terceiro plano-->
+        <div class="planos-disp">
+            <p class="plano-pequeno">Plano</p>
+            <h1 class="titulo">Nome do plano</h1>
+            <p class="sub-titulo">Você aluga e no final a moto poderá ser sua.</p>
+
+            <div class="check">
+                <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
+                <p>Plano com duração de 2 anos.</p>
+            </div>
+
+            <div class="check">
+                <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
+                <p>Você pode escolher entre uma moto 0 km ou usada.</p>
+            </div>
+
+            <div class="check">
+                <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
+                <p>A moto poderá ser sua no final do plano.</p>
+            </div>
+
+
+            <p class="preco">A partir</p>
+            <h1 class="valor"> <strong>R$31</strong><span>/dia</span></h1>
+
+            <div class="btn-alugar">
+                <a href=""><button class="alugar-btn">Quero alugar</button></a>
+            </div>
+        </div>
+    </div>
 </section>
 
 
