--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./CSS'S/beneficios.css">
     <link rel="stylesheet" href="./CSS'S/nossas-motos.css">
     <link rel="stylesheet" href="./CSS'S/planos.css">
+    <link rel="stylesheet" href="./CSS'S/FAQ.css">
 
 </head>
 <body>
@@ -208,6 +209,39 @@
             </div>
         </div>
     </div>
+</section>
+
+<section id="faq">
+
+    <div id="faq-h1">
+        <h1>Dúvidas frequentes</h1>
+    </div>
+    
+    <details>
+        <summary>O que é a Royalt? <span>+</span></summary>
+        <p>A Royalt é uma empresa de locação de motos, oferecendo soluções práticas e acessíveis para quem precisa de uma moto, seja para uso pessoal ou profissional. Com uma frota distribuída, garantimos flexibilidade, segurança e ótimas condições de aluguel, sem preocupações com manutenção ou custos extras.</p>   
+    </details>
+
+    <details>
+        <summary>Como faço para alugar? <span>+</span></summary>
+        <p>É simples e rápido! Ao clicar no botão "Alugar", você será redirecionado diretamente para o nosso WhatsApp, onde nossa equipe estará pronta para te ajudar em todo o processo de locação. Vamos tirar suas dúvidas, fornecer informações e facilitar a reserva para você.</p>   
+    </details>
+
+    <details>
+        <summary>Posso alugar com o nome sujo? <span>+</span></summary>
+        <p>A Mottu não faz consulta no Serasa, isso significa que você pode ser aprovado e alugar uma Mottu, mesmo se tiver nome sujo. Você também não precisa de cartão de crédito ou de fiador.</p>   
+    </details>
+
+    <details>
+        <summary>O que eu preciso para alugar uma moto?<span>+</span></summary>
+        <p>Você apenas precisa ter uma CNH A, e é possível alugar com habilitação provisória. Não se esqueça de levar sua CNH fisicamente ou a versão digital oficial no app do Detran no dia da retirada da sua moto.</p>   
+    </details>
+
+    <details>
+        <summary>O que acontece em casos de acidente, roubo ou se a moto for apreendida?<span>+</span></summary>
+        <p>Em casos de acidente, roubo ou apreensão da moto, entre imediatamente em contato com o nosso canal de suporte pelo Whatsapp. Nessas situações poderá ser cobrada uma taxa de coparticipação pelo acionamento da proteção, consulte as taxas no nosso tarifário. Uma moto reserva poderá ser disponibilizada mediante análise do ocorrido.</p>   
+    </details>
+
 </section>
 
 
