--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Royalt Locadora</title>
+    <link rel="icon" type="image/png" href="./ASSENTS/logo--R.png">
 
     <link rel="stylesheet" href="./CSS'S/config-global.css">
     <link rel="stylesheet" href="./CSS'S/header.css">
@@ -19,6 +20,7 @@
     <link rel="stylesheet" href="./CSS'S/nossas-motos.css">
     <link rel="stylesheet" href="./CSS'S/planos.css">
     <link rel="stylesheet" href="./CSS'S/FAQ.css">
+    <link rel="stylesheet" href="./CSS'S/footer.css">
 
 </head>
 <body>
@@ -92,20 +94,20 @@
     <div id="motos-on">
         <div class="motos" id="moto-1">
             <img src="./ASSENTS/moto-fan.png" alt="">
-            <h1>Queridinha</h1>
+            <h1>Royalt Sport</h1>
             <p>A moto mais econômica do Brasil.</p>
         </div>
 
         <div class="motos" id="moto-2">
             <img src="./ASSENTS/moto-eletrica 1.png" alt="">
-            <h1>Elétrica</h1>
+            <h1>Royalt E</h1>
             <p>Sustentável e eficiente.</p>
 
         </div>
 
         <div class="motos" id="moto-3">
             <img src="./ASSENTS/moto-pop.png" alt="">
-            <h1>Popzinha</h1>
+            <h1>Pop Royalt</h1>
             <p>Econômica, ágil e fácil de conduzir.</p>
         </div>
     </div>
@@ -122,7 +124,7 @@
         <!--primeiro plano-->
         <div class="planos-disp">
             <p class="plano-pequeno">Plano</p>
-            <h1 class="titulo">Nome do plano</h1>
+            <h1 class="titulo">Minha Royalt</h1>
             <p class="sub-titulo">Você aluga e no final a moto poderá ser sua.</p>
 
             <div class="check">
@@ -152,27 +154,27 @@
         <!--segundo plano-->
         <div class="planos-disp">
             <p class="plano-pequeno">Plano</p>
-            <h1 class="titulo">Nome do plano</h1>
+            <h1 class="titulo">Ilimitado</h1>
             <p class="sub-titulo">Você aluga e no final a moto poderá ser sua.</p>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
-                <p>Plano com duração de 2 anos.</p>
+                <p>Plano com duração de 1 ano.</p>
             </div>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
-                <p>Você pode escolher entre uma moto 0 km ou usada.</p>
+                <p>Kms Ilimitados.</p>
             </div>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
-                <p>A moto poderá ser sua no final do plano.</p>
+                <p>Melhor custo-benefício para quem roda muito.</p>
             </div>
 
 
             <p class="preco">A partir</p>
-            <h1 class="valor"> <strong>R$31</strong><span>/dia</span></h1>
+            <h1 class="valor"> <strong>R$27</strong><span>/dia</span></h1>
 
             <div class="btn-alugar">
                 <a href=""><button class="alugar-btn">Quero alugar</button></a>
@@ -182,27 +184,27 @@
         <!--terceiro plano-->
         <div class="planos-disp">
             <p class="plano-pequeno">Plano</p>
-            <h1 class="titulo">Nome do plano</h1>
+            <h1 class="titulo">Flex</h1>
             <p class="sub-titulo">Você aluga e no final a moto poderá ser sua.</p>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
-                <p>Plano com duração de 2 anos.</p>
+                <p>Valor que se adapta a sua rotina.</p>
             </div>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
-                <p>Você pode escolher entre uma moto 0 km ou usada.</p>
+                <p>Plano com duração de 1 ano.</p>
             </div>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
-                <p>A moto poderá ser sua no final do plano.</p>
+                <p>Pague conforme a quilometragem rodada na semana</p>
             </div>
 
 
             <p class="preco">A partir</p>
-            <h1 class="valor"> <strong>R$31</strong><span>/dia</span></h1>
+            <h1 class="valor"> <strong>R$18</strong><span>/dia</span></h1>
 
             <div class="btn-alugar">
                 <a href=""><button class="alugar-btn">Quero alugar</button></a>
@@ -229,7 +231,7 @@
 
     <details>
         <summary>Posso alugar com o nome sujo? <span>+</span></summary>
-        <p>A Mottu não faz consulta no Serasa, isso significa que você pode ser aprovado e alugar uma Mottu, mesmo se tiver nome sujo. Você também não precisa de cartão de crédito ou de fiador.</p>   
+        <p>Aqui na Royalt não fazemos consulta no Serasa, isso significa que você pode ser aprovado e alugar uma moto, mesmo se tiver nome sujo.</p>   
     </details>
 
     <details>
@@ -241,8 +243,23 @@
         <summary>O que acontece em casos de acidente, roubo ou se a moto for apreendida?<span>+</span></summary>
         <p>Em casos de acidente, roubo ou apreensão da moto, entre imediatamente em contato com o nosso canal de suporte pelo Whatsapp. Nessas situações poderá ser cobrada uma taxa de coparticipação pelo acionamento da proteção, consulte as taxas no nosso tarifário. Uma moto reserva poderá ser disponibilizada mediante análise do ocorrido.</p>   
     </details>
-
 </section>
+
+<footer>
+    <div id="direito"><p> <strong>Copyright © 2025 Royalt</strong><br> - Todos direitos reservados</p></div>
+
+    <div id="infos">
+        <div id="redes" class="info">
+            <h1>Cnpj</h1>
+            <a href=""> 38.223.320/000183</a>   
+        </div>
+
+        <div id="redes" class="info">
+            <h1>Sociais</h1>
+            <a href="">Instagram</a>
+        </div>
+    </div>
+</footer>
 
 
     
