adicionando links de wpp

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </ul>
         
         <div id="btn">
-        <a href=""><button>Alugar agora</button></a >
+        <a href="https://wa.me/5521972633464?text=Olá!+Gostaria+de+alugar+uma+moto+na+Royalty+🧡" target="_blank"><button>Alugar agora</button></a >
         </div>
 
     </div>
@@ -82,7 +82,7 @@
     </div>
 
     <div id="my-moto">
-        <a href=""><button>Quero minha moto</button></a>
+        <a href="https://wa.me/5521972633464?text=Olá!+Gostaria+de+alugar+uma+moto+na+Royalty+🧡" target="_blank"><button>Quero minha moto</button></a>
     </div>
 </section>
 
@@ -147,7 +147,7 @@
             <h1 class="valor"> <strong>R$31</strong><span>/dia</span></h1>
 
             <div class="btn-alugar">
-                <a href=""><button class="alugar-btn">Quero alugar</button></a>
+                <a href="https://wa.me/5521972633464?text=Olá!+Gostaria+de+saber+mais+sobre+o+plano+Minha+Royalty+🧡" target="_blank"><button class="alugar-btn">Quero alugar</button></a>
             </div>
         </div>
 
@@ -155,7 +155,7 @@
         <div class="planos-disp">
             <p class="plano-pequeno">Plano</p>
             <h1 class="titulo">Royalty Ilimitado</h1>
-            <p class="sub-titulo">Você aluga e no final a moto poderá ser sua.</p>
+            <p class="sub-titulo">Para trabalhar sem limite de km.</p>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
@@ -177,7 +177,7 @@
             <h1 class="valor"> <strong>R$27</strong><span>/dia</span></h1>
 
             <div class="btn-alugar">
-                <a href=""><button class="alugar-btn">Quero alugar</button></a>
+                <a href="https://wa.me/5521972633464?text=Olá!+Gostaria+de+saber+mais+sobre+o+plano+Royalty+Ilimitado+🧡" target="_blank"><button class="alugar-btn">Quero alugar</button></a>
             </div>
         </div>
 
@@ -185,7 +185,7 @@
         <div class="planos-disp">
             <p class="plano-pequeno">Plano</p>
             <h1 class="titulo">Royalty Flex</h1>
-            <p class="sub-titulo">Você aluga e no final a moto poderá ser sua.</p>
+            <p class="sub-titulo">O mais barato para quem roda menos.</p>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
@@ -207,7 +207,7 @@
             <h1 class="valor"> <strong>R$18</strong><span>/dia</span></h1>
 
             <div class="btn-alugar">
-                <a href=""><button class="alugar-btn">Quero alugar</button></a>
+                <a href="https://wa.me/5521972633464?text=Olá!+Gostaria+de+saber+mais+sobre+o+plano+Royalty+Flex+🧡" target="_blank"><button class="alugar-btn">Quero alugar</button></a>
             </div>
         </div>
     </div>
