--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Royalty Locadora</title>
-    <link rel="icon" type="image/png" href="./ASSENTS/logo--R.png">
+    <link rel="icon" type="image/png" href="./ASSENTS/logo-cima.png">
 
     <link rel="stylesheet" href="./CSS'S/config-global.css">
     <link rel="stylesheet" href="./CSS'S/header.css">
