--- a/index.html
+++ b/index.html
@@ -129,22 +129,27 @@
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
-                <p>Plano com duração de 2 anos.</p>
+                <p>Contrato válido por 2 anos.</p>
             </div>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
-                <p>Você pode escolher entre uma moto 0 km ou usada.</p>
+                <p>Moto 0 km entregue no início do contrato.</p>
             </div>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
-                <p>A moto poderá ser sua no final do plano.</p>
+                <p>Ao término do contrato, a moto será sua.</p>
+            </div>
+
+            <div class="check">
+                <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
+                <p>Pagamento realizado semanalmente.</p>
             </div>
 
 
             <p class="preco">A partir</p>
-            <h1 class="valor"> <strong>R$31</strong><span>/dia</span></h1>
+            <h1 class="valor"> <strong>R$30</strong><span>/dia</span></h1>
 
             <div class="btn-alugar">
                 <a href="https://wa.me/5521972633464?text=Olá!+Gostaria+de+saber+mais+sobre+o+plano+Minha+Royalty+🧡" target="_blank"><button class="alugar-btn">Quero alugar</button></a>
@@ -159,22 +164,28 @@
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
-                <p>Plano com duração de 1 ano.</p>
+                <p>Contrato com duração de 1 ano.</p>
             </div>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
-                <p>Kms Ilimitados.</p>
+                <p>Moto 0 km entregue no início do contrato.</p>
             </div>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
-                <p>Melhor custo-benefício para quem roda muito.</p>
+                <p>Quilometragem ilimitada durante o período do contrato.</p>
             </div>
+
+            <div class="check">
+                <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
+                <p>Pagamento realizado semanalmente.</p>
+            </div>
+
 
 
             <p class="preco">A partir</p>
-            <h1 class="valor"> <strong>R$27</strong><span>/dia</span></h1>
+            <h1 class="valor"> <strong>R$35</strong><span>/dia</span></h1>
 
             <div class="btn-alugar">
                 <a href="https://wa.me/5521972633464?text=Olá!+Gostaria+de+saber+mais+sobre+o+plano+Royalty+Ilimitado+🧡" target="_blank"><button class="alugar-btn">Quero alugar</button></a>
@@ -185,26 +196,27 @@
         <div class="planos-disp">
             <p class="plano-pequeno">Plano</p>
             <h1 class="titulo">Royalty Flex</h1>
-            <p class="sub-titulo">O mais barato para quem roda menos.</p>
+            <p class="sub-titulo" id="royalty-flex">O mais barato para quem roda menos.</p>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
-                <p>Valor que se adapta a sua rotina.</p>
+                <p>Quilometragem ilimitada.</p>
             </div>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
-                <p>Plano com duração de 1 ano.</p>
+                <p>Contrato disponível por 30, 90 ou 180 dias.</p>
             </div>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
-                <p>Pague conforme a quilometragem rodada na semana</p>
+                <p>Pagamento realizado semanalmente.
+                </p>
             </div>
 
 
             <p class="preco">A partir</p>
-            <h1 class="valor"> <strong>R$18</strong><span>/dia</span></h1>
+            <h1 class="valor"> <strong>R$40</strong><span>/dia</span></h1>
 
             <div class="btn-alugar">
                 <a href="https://wa.me/5521972633464?text=Olá!+Gostaria+de+saber+mais+sobre+o+plano+Royalty+Flex+🧡" target="_blank"><button class="alugar-btn">Quero alugar</button></a>
