ajeitando e colocando créditos

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <main id="main">
     <div id="text">
         <h1>A liberdade sobre duas rodas, com planos
-            <span>a partir de R$18.</span></h1>
+            <span>a partir de R$30.</span></h1>
         <p>Uma locadora de motos comprometida em oferecer praticidade, liberdade e segurança. Garantimos a melhor experiência para quem precisa de uma moto para o dia a dia</p>
         <p>Facilitamos sua mobilidade com motos econômicas para aluguel de forma simples e rápida.</p>
     </div>
@@ -196,7 +196,7 @@
         <div class="planos-disp">
             <p class="plano-pequeno">Plano</p>
             <h1 class="titulo">Royalty Flex</h1>
-            <p class="sub-titulo" id="royalty-flex">O mais barato para quem roda menos.</p>
+            <p class="sub-titulo" id="royalty-flex">Liberdade para rodar quando tempo precisar.</p>
 
             <div class="check">
                 <img src="./ASSENTS/icone-de-coche-orange.png" alt="">
@@ -268,11 +268,16 @@
 
         <div id="redes" class="info">
             <h1>Sociais</h1>
-            <a href="">Instagram</a>
+            <a href="https://www.instagram.com/royalty.locadora/" target="_blank">Instagram</a>
         </div>
+        
     </div>
+
 </footer>
 
+<div id="creditos">
+    <p>Powered by <a href="https://www.instagram.com/vertincriativo/" target="_blank">Vertincriativo</a></p>
+</div>
 
     
 </body>
