--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 </footer>
 
 <div id="creditos">
-    <p>Powered by <a href="https://www.instagram.com/vertincriativo/" target="_blank">Vertincriativo</a></p>
+    <p>Powered by <a href="https://www.instagram.com/vertocriativo/" target="_blank">Vertocriativo</a></p>
 </div>
 
     
